# check-leak

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  RELEASING.md  dependency.txt  pom.xml
.github/workflows/: build.yml  build_libs.yml  windows.yml
assertj/: pom.xml
assertj/src/main/java/io/github/checkleak/assertj/: CheckLeakAssert.java
check-leak/: pom.xml
check-leak/src/main/c/: agent.h  io_github_checkleak_core_CheckLeak.h  manual-compile-linux.sh  manual-compile-mac.sh
check-leak/src/main/filtered-resources/io/github/checkleak/core/: banner.txt
check-leak/src/main/java/io/github/checkleak/core/: Agent.java  AutoCompletion.java  CheckLeak.java  Histogram.java  Installer.java  InventoryDataPoint.java  JVMTICapture.java  JVMTIFieldsMetadata.java  ReferenceDataPoint.java  RemoteCheckLeak.java  TableGenerator.java
check-leak/src/main/resources/io/github/checkleak/core/: header-activemqweb.txt  header.txt
check-leak/src/main/resources/platforms-lib/darwin-aarch64/: libcheckleak.dylib
check-leak/src/main/resources/platforms-lib/darwin-x86_64/: libcheckleak.dylib
check-leak/src/test/java/io/github/checkleak/core/: AgentTest.java  ExampleTest.java  FindHolderTest.java  HistogramTest.java  RemoteAgentTest.java  ValidateResourcesTest.java
core/: README.md  dependency.txt  pom.xml
core/src/main/c/: CMakeLists.txt  agent.c  com_dsect_jvmti_JVMTIInterface.h  io_github_checkleak_core_CheckLeak.h  org_checkleak_core_CheckLeak.h  org_checkleak_jvmti_JVMTIInterface.h  org_dleak_jvmti_JVMTIInterface.h
core/src/main/docker/: Dockerfile-centos  README.md
core/src/main/java/com/dsect/jvmti/: InventoryDataPoint.java  JVMTICallBack.java  JVMTICapture.java  JVMTIFieldsMetadata.java  JVMTIInterface.java  JVMTITypes.java  ReferenceDataPoint.java  UnexpectedLeak.java
core/src/main/java/com/dsect/jvmti/util/: JVMTIReport.java
core/src/main/java/io/github/checkleak/core/: CheckLeak.java  Installer.java  InventoryDataPoint.java  JVMTICallBack.java  JVMTITypes.java
core/src/main/java/org/checkleak/core/: CheckLeak.java  Installer.java  InventoryDataPoint.java  JVMTICallBack.java  JVMTICapture.java  JVMTIFieldsMetadata.java  JVMTITypes.java  ReferenceDataPoint.java
core/src/main/java/org/checkleak/core/util/: JVMTIReport.java
core/src/main/java/org/checkleak/jvmti/: Installer.java  InventoryDataPoint.java  JVMTICallBack.java  JVMTICapture.java  JVMTIFieldsMetadata.java  JVMTIInterface.java  JVMTITypes.java  ReferenceDataPoint.java
core/src/main/java/org/checkleak/jvmti/util/: JVMTIReport.java
core/src/main/java/org/dleak/jvmti/: Installer.java  InventoryDataPoint.java  JVMTICallBack.java  JVMTICapture.java  JVMTIFieldsMetadata.java  JVMTIInterface.java  JVMTITypes.java  ReferenceDataPoint.java
core/src/main/java/org/dleak/jvmti/util/: JVMTIReport.java
core/src/main/resources/lib/darwin/: libdleak.dylib  libdsect.dylib
core/src/main/resources/platforms-lib/darwin/: libcheckleak.dylib  libdleak.dylib
core/src/main/resources/platforms-lib/darwin-x86_64/: libcheckleak.dylib
core/src/test/java/com/dsect/jvmti/: ExampleTest.java  FindHolderTest.java  ReportTest.java  SomeInterface.java  StressReportTest.java  SubClassTest.java  SuperClassTest.java  TestClass.java  TestQueue.java
core/src/test/java/com/dsect/jvmti/fieldOnInterface/: DeclaringClass.java  FieldOnInterfaceTest.java  InterfaceOnSuperClass.java  Interfacing.java  SecondInterfaceOnSuperClass.java  SuperClassing.java  TestOnInterface.java
core/src/test/java/com/dsect/jvmti/memoryweb/: JVMTIWebTestManual.java
core/src/test/java/com/dsect/jvmti/metadata/: C1.java  C2.java  I0.java  I1.java  I2.java  TestMetaField.java
core/src/test/java/io/github/checkleak/core/: AgentTest.java  ExampleTest.java  FindHolderTest.java  ReportTest.java  SomeInterface.java  SubClassTest.java  SuperClassTest.java  TestClass.java  TestMetaField.java  TestQueue.java  TestSubClass.java  ValidateResourcesTest.java
core/src/test/java/org/checkleak/core/: ExampleTest.java  FindHolderTest.java  ReportTest.java  SomeInterface.java  SubClassTest.java  SuperClassTest.java  TestClass.java  TestQueue.java  ValidateResourcesTest.java
core/src/test/java/org/checkleak/core/fieldOnInterface/: DeclaringClass.java  FieldOnInterfaceTest.java  InterfaceOnSuperClass.java  Interfacing.java  SecondInterfaceOnSuperClass.java  SuperClassing.java  TestOnInterface.java
core/src/test/java/org/checkleak/core/testdata/: C1.java  C2.java  I0.java  I1.java  I2.java  TestMetaField.java
core/src/test/java/org/checkleak/jvmti/: ExampleTest.java  FindHolderTest.java  ReportTest.java  SomeInterface.java  SubClassTest.java  SuperClassTest.java  TestClass.java  TestQueue.java  ValidateResourcesTest.java
core/src/test/java/org/checkleak/jvmti/fieldOnInterface/: DeclaringClass.java  Interfacing.java  (+5 more)
core/src/test/java/org/dleak/jvmti/: ExampleTest.java  FindHolderTest.java  ReportTest.java  SomeInterface.java  SubClassTest.java  SuperClassTest.java  TestClass.java  TestQueue.java  ValidateResourcesTest.java
examples/: pom.xml
examples/junit-example/: pom.xml
examples/junit-example/src/main/java/com/dsect/: App.java
examples/junit-example/src/test/java/com/dsect/: AppTest.java
examples/junit-example/src/test/java/org/dleak/: AvoidLeaksTest.java
maven/: .pom.xml.swp  pom.xml
maven/src/main/java/com/dsect/maven/: AbstractPlugin.java  ResolveAgent.java
maven/src/main/java/org/checkleak/maven/: AbstractPlugin.java  InstallLib.java
maven/src/main/java/org/dleak/maven/: AbstractPlugin.java  InstallLib.java
maven/src/test/java/org/checkleak/maven/: ValidateResourcesTest.java
maven/src/test/java/org/dleak/maven/: ValidateResourcesTest.java
scripts/: compile-using-docker.sh  compile-using-podman.sh
src/main/c/: CMakeLists.txt  agent.c  agent.cc  agent.h  com_dsect_jvmti_JVMTIInterface.h
src/main/java/com/dsect/jvmti/: JVMTIInterface.java
src/test/java/com/dsect/jvmti/: ExampleTest.java  FindHolderTest.java  StressReportTest.java  TestClass.java
src/test/java/com/redhat/crawl/jvmti/: StressReportTest.java  TestClass.java
(+58 files in other folders)
